# c-sqlite-clone

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  build.bat  format-all.sh  readme.md
database/: CMakeLists.txt
database/include/: CommandEnums.h  Common.h  InputBuffer.h  MetaCommand.h  Row.h  Table.h  defines.h
database/src/: Common.c  InputBuffer.c  MetaCommand.c  Row.c  Table.c  main.c
logger/: CMakeLists.txt
logger/include/: log.h
logger/src/: log.c
utils/: CMakeLists.txt
utils/include/: nob.h
utils/src/: utils.c
